[gd_scene load_steps=7 format=3 uid="uid://bmq3rydq511nj"]

[ext_resource type="Script" path="res://scripts/Motor_de_Juego.gd" id="1_kdd8j"]

[sub_resource type="GDScript" id="GDScript_g7ilc"]
resource_name = "digit_up"
script/source = "extends Button

var motor

# Called when the node enters the scene tree for the first time.
func _ready():
	motor = get_node(\"..\")
	motor.boom()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _pressed():
	print(motor.digit_up())
"

[sub_resource type="GDScript" id="GDScript_qx7ms"]
resource_name = "digit_down"
script/source = "extends Button

var motor

# Called when the node enters the scene tree for the first time.
func _ready():
	motor = get_node(\"..\")
	motor.boom()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _pressed():
	print(motor.digit_down())
"

[sub_resource type="GDScript" id="GDScript_8hqhk"]
resource_name = "next_digit"
script/source = "extends Button

var motor

# Called when the node enters the scene tree for the first time.
func _ready():
	motor = get_node(\"..\")
	motor.boom()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _pressed():
	print(motor.next_digit())
"

[sub_resource type="GDScript" id="GDScript_5mmot"]
resource_name = "previous_digit"
script/source = "extends Button

var motor

# Called when the node enters the scene tree for the first time.
func _ready():
	motor = get_node(\"..\")
	motor.boom()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _pressed():
	print(motor.previous_digit())
"

[sub_resource type="GDScript" id="GDScript_fs3gi"]
script/source = "extends Button

var motor

# Called when the node enters the scene tree for the first time.
func _ready():
	motor = get_node(\"..\")
	motor.boom()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func _pressed():
	print(motor.boom())
"

[node name="PruebaMotor" type="Node2D"]
script = ExtResource("1_kdd8j")

[node name="digit_up" type="Button" parent="."]
offset_left = 243.0
offset_top = 85.0
offset_right = 313.0
offset_bottom = 116.0
text = "digit_up"
script = SubResource("GDScript_g7ilc")

[node name="digit_down" type="Button" parent="."]
offset_left = 237.0
offset_top = 233.0
offset_right = 329.0
offset_bottom = 264.0
text = "digit_down"
script = SubResource("GDScript_qx7ms")

[node name="next_digit" type="Button" parent="."]
offset_left = 383.0
offset_top = 159.0
offset_right = 467.0
offset_bottom = 190.0
text = "next_digit"
script = SubResource("GDScript_8hqhk")

[node name="previous_digit" type="Button" parent="."]
offset_left = 76.0
offset_top = 159.0
offset_right = 192.0
offset_bottom = 190.0
text = "previous_digit"
script = SubResource("GDScript_5mmot")

[node name="boom" type="Button" parent="."]
offset_left = 245.0
offset_top = 158.0
offset_right = 315.0
offset_bottom = 189.0
text = "boom"
script = SubResource("GDScript_fs3gi")
